SAK-16222 Linktool code cleanup
git-svn-id: https://source.sakaiproject.org/svn/linktool/trunk@61413 66ffb92e-73f9-0310-93c1-f5514f145a0a